refactor(project): Initial config
