# src/domain/factories/pagination/paginationFactory.js
@@ -1,0 +1,7 @@
+module.exports = () => ({
+    buildResult: (data) => {
+        const pagination = [data];
+
+        return { pagination };
+    }
+});
